# xtyping

./: Cargo.toml  README.md
assets/: xtyping.icns
src/: active.rs  game.rs  gaming.rs  menu.rs  new_player.rs  newplayer.rs  play_game.rs  playing.rs  register.rs  startup.rs  ui.rs  widgets.rs  xtyping.rs
src/active/: common.rs  playing.rs  spawn.rs  splash.rs
src/gaming/: checkpoint.rs  common.rs  exiting.rs  failed.rs  paused.rs  playing.rs  spawn.rs  splash.rs  upgrade.rs
src/play_game/: logic.rs  marker.rs
src/playing/: components.rs  marker.rs  playing.rs  spawn.rs  splash.rs
src/widgets/: button.rs  dialog.rs  input.rs  listview.rs  mod.rs
