[package]
name = "xtyping"
version = "0.1.0"
description = "超级打字是一个让玩家通过射击飞机来练习键盘打字的游戏"
edition = "2024"
authors = ["Kyle Qian <kyleqian@gmail.com>"]

[[bin]]
name = "xtyping"
path = "src/xtyping.rs"

[dependencies]
bevy = { version = "0.17", features = ["bevy_dev_tools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
dirs = "6.0.0"

[profile.release]
lto = true
debug = false
strip = "debuginfo"
panic = "abort"

[package.metadata.bundle]
name = "超级打字"
identifier = "dev.kyleqian.xtyping"
icon = ["assets/icon.icns"]
platforms = ["macos"]
